# velox

./: .coderabbit.yaml  .gitignore  .gitmodules  CMakeLists.txt  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: benchmark.yml  breeze.yml  build-metrics.yml  build_pyvelox.yml  docker.yml  docs.yml  experimental.yml  linux-build-base.yml  linux-build.yml  macos.yml  preliminary_checks.yml  scheduled.yml
CMake/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake
CMake/resolve_dependency_modules/: antlr4-runtime.cmake  clp.cmake  date.cmake  msgpack-cxx.cmake  nlohmann_json.cmake  spdlog.cmake  ystdlib_cpp.cmake
CMake/resolve_dependency_modules/boost/: CMakeLists.txt
scripts/: setup-ubuntu.sh
scripts/docker/: adapters.dockerfile  prestojava-container.dockerfile  spark-container.dockerfile
velox/connectors/: CMakeLists.txt
velox/connectors/clp/: CMakeLists.txt  ClpColumnHandle.cpp  ClpColumnHandle.h  ClpConfig.cpp  ClpConfig.h  ClpConnector.cpp  ClpConnector.h  ClpConnectorSplit.h  ClpDataSource.cpp  ClpDataSource.h  ClpTableHandle.cpp  ClpTableHandle.h
velox/connectors/clp/search_lib/: ArchiveReader.cpp  ArchiveReader.hpp  ArchiveReaderAdaptor.cpp  ArchiveReaderAdaptor.hpp  CMakeLists.txt  ClpCursor.cpp  ClpCursor.h  ClpQueryRunner.cpp  ClpQueryRunner.h  ClpVectorLoader.cpp  ClpVectorLoader.h  Cursor.cpp  Cursor.h  Decompressor.hpp  Defs.hpp  DictionaryReader.hpp  KVIRCursor.cpp  KVIRCursor.h  OrderedProjection.cpp  OrderedProjection.h  PackedStreamReader.cpp  PackedStreamReader.hpp  QueryRunner.cpp  QueryRunner.h  ReaderUtils.cpp  ReaderUtils.hpp  SchemaReader.cpp  SchemaReader.hpp  SchemaTree.hpp  TimestampDictionaryReader.cpp  TimestampPattern.cpp  TimestampPattern.hpp  ZstdDecompressor.cpp  ZstdDecompressor.hpp  type_utils.hpp
velox/connectors/clp/search_lib/clp_native/aws/: AwsAuthenticationSigner.cpp
velox/connectors/clp/search_lib/search/: Cursor.cpp  Cursor.hpp  Projection.cpp  Projection.hpp  QueryRunner.cpp  QueryRunner.hpp  test.cpp
velox/connectors/clp/search_lib/search/kql/: CMakeLists.txt
velox/connectors/clp/tests/: CMakeLists.txt  ClpConnectorTest.cpp
velox/connectors/clp/tests/examples/: test_2.ndjson
velox/docs/: configs.rst
velox/docs/develop/: connectors.rst
velox/docs/develop/testing/: spark-query-runner.rst
velox/exec/trace/: CMakeLists.txt
velox/functions/lib/: QuantileDigest.h
velox/functions/prestosql/: IPFunctions.h  IpFunctions.h  TypeOf.cpp
velox/functions/prestosql/registration/: CMakeLists.txt  IPFunctionsRegistration.cpp  IpFunctionsRegistration.cpp  RegistrationFunctions.cpp
velox/functions/prestosql/types/: CMakeLists.txt  IPAddressType.cpp  IPAddressType.h  IPPrefixType.cpp  IPPrefixType.h  IpAddressType.cpp  IpAddressType.h  IpPrefixType.cpp  IpPrefixType.h
